# itch-decoder-performance-lab-

./: .gitignore  CMakeLists.txt  Readme.md
imhex/: MoldUDP64pattern  MoldUDP64pattern.txt
src/: main.cpp
src/containers/: open_address_hash_map.hpp  open_adress_hash_map.hpp
src/decoder/: mold_itch_protocol.hpp  scalar_decoder.hpp
src/dpdk/: eal_init.cpp  eal_init.hpp  port_manager.cpp  port_manager.hpp  rx_loop.hpp
src/io/: binary_dump.hpp
src/order_book/: order_book.hpp
src/perf/: perf_stats.hpp
